partially fix small scroll jumps on mobile

--- a/src/scss/sections/_saptha.scss
+++ b/src/scss/sections/_saptha.scss
@@ -1,9 +1,7 @@
 .saptha__hero {
     --gap: 0;
-    margin-top: 3rem;
-
     align-items: center;
-    min-height: 100vh;
+    height: 100vh;
 
     &__heading__container {
         margin-block: auto;
