--- a/src/scss/sections/_shared.scss
+++ b/src/scss/sections/_shared.scss
@@ -1,6 +1,10 @@
+html {
+    scroll-behavior: smooth;
+}
+
 .layout {
-    min-height: 100vh;
-    min-height: 100dvh;
+    // min-height: 100vh;
+    // min-height: 100dvh;
     // overflow-x: hidden;
     // overflow: hidden;
     // display: grid;
@@ -10,7 +14,7 @@
     display: flex;
     flex-direction: column;
     .footer {
-        margin-top: auto;
+        // margin-top: auto;
         // grid-column: -1;
     }
 }
@@ -20,7 +24,7 @@
     inset: 0;
     z-index: -1;
     min-height: 100vh;
-    min-height: 100dvh;
+    // min-height: 100dvh;
 
     &--preview {
         background: url(/static/natya_large.jpg) #0f0e0d no-repeat;
@@ -39,13 +43,13 @@
     position: fixed;
     inset: 0;
     z-index: -1;
-    min-height: 100vh;
-    min-height: 100dvh;
+    height: 100%;
+    // min-height: 100dvh;
     background: url(/static/saptha_hero_bg_mobile.jpg);
     background: url(/static/saptha_hero_bg_mobile.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    // background-position: center top;
+    background-position: center top;
     // background-attachment: fixed;
 
     @media (min-width: 31em) {
@@ -67,57 +71,17 @@
     padding-inline: 2em;
     justify-content: center;
     align-items: center;
-    // background-color: hsl(var(--clr-black));
-
-    // @include bp(tablet) {
-    //     background-color: unset;
-    // }
 }
-
-// .bg-wrap {
-//     grid-template-columns: repeat(6, 1fr);
-//     grid-template-rows: repeat(6, 1fr);
-
-//     > * {
-//         grid-row: 1/6;
-//         grid-column: 1/6;
-//     }
-// }
-
-// .img--saptha-bg {
-//     object-fit: cover;
-// }
-// scrollbar
-
-// :root,
 body {
     --sb-track-color: #19161d;
     --sb-thumb-color: #ba2548;
     --sb-size: 5px;
 
-    // scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
     padding-top: 4.6rem;
-    // padding-top: clamp(4.6rem, 4.27rem + 1.6504vw, 6.25rem);
 }
 
-// body::-webkit-scrollbar {
-//     width: var(--sb-size);
-// }
-
-// body::-webkit-scrollbar-track {
-//     background: var(--sb-track-color);
-//     border-radius: 10px;
-// }
-
-// body::-webkit-scrollbar-thumb {
-//     background: var(--sb-thumb-color);
-//     border-radius: 10px;
-// }
-
-// hero logo
 .hero__logo {
     aspect-ratio: 1;
-    // height: clamp(12.625rem, 7vw, 30rem);
     height: clamp(14rem, 11.4rem + 13vw, 27rem);
 }
 
